tests/invalid/include_cycle_symlink.c
#include "cycle_link_a.h"
int main() { return 0; }
